// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multi point mode in linear elements > arrow 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "endArrowhead": "arrow",
  "endBinding": null,
  "fillStyle": "hachure",
  "frameId": null,
  "groupIds": [],
  "height": 110,
  "id": "id0",
  "isDeleted": false,
  "lastCommittedPoint": [
    70,
    110,
  ],
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      20,
      30,
    ],
    [
      70,
      110,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "seed": 1278240551,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "arrow",
  "updated": 1,
  "version": 7,
  "versionNonce": 1505387817,
  "width": 70,
  "x": 30,
  "y": 30,
}
`;

exports[`multi point mode in linear elements > line 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "endArrowhead": null,
  "endBinding": null,
  "fillStyle": "hachure",
  "frameId": null,
  "groupIds": [],
  "height": 110,
  "id": "id0",
  "isDeleted": false,
  "lastCommittedPoint": [
    70,
    110,
  ],
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      20,
      30,
    ],
    [
      70,
      110,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "seed": 1278240551,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "line",
  "updated": 1,
  "version": 7,
  "versionNonce": 1505387817,
  "width": 70,
  "x": 30,
  "y": 30,
}
`;
